--- a/shop.html
+++ b/shop.html
@@ -141,20 +141,20 @@
         <row>
         <div>
             <blockquote class="blockquote">
-                <p class="mb-0">Before this class, I didn't even like tacos. Thanks for changing my life!!!</p>
-                <footer class="blockquote-footer">Katie, <cite title="Class of 2017">Class of 2016</cite></footer>
+                <p class="mb-0">Every time I MiniMeats my body is grateful and I feel fair towards our planet</p>
+                <footer class="blockquote-footer">Guido, <cite title="Brother of founder">Progressive thinker</cite></footer>
             </blockquote>
         </div>
         <div>
             <blockquote class="blockquote">
-                <p class="mb-0">Brian and Ben are constantly thinking of innovative ways to incorporate their passion for tacos and kale into their lectures. 100% would recommend!</p>
-                <footer class="blockquote-footer">Brendan, <cite title="Class of 2017">Class of 2018</cite></footer>
+                <p class="mb-0">These are the best tasting insects (MiniMeats) I have ever had!</p>
+                <footer class="blockquote-footer">Jamie, <cite title="Food Junkie">Food Junkie</cite></footer>
             </blockquote>
         </div>
         <div>
             <blockquote class="blockquote">
-                <p class="mb-0">I thought I would go into consulting after Kellogg. After KIEI-451, I'm definitely going into consulting.</p>
-                <footer class="blockquote-footer">Rob, <cite title="Class of 2019">Class of 2017</cite></footer>
+                <p class="mb-0">I love the combination of complete protein and protecting our planet, no other food brings those two together like MiniMeats</p>
+                <footer class="blockquote-footer">Harold, <cite title="Healthy Harold">Healthy Harold</cite></footer>
             </blockquote>
         </div>
         </row>
