--- a/shop.html
+++ b/shop.html
@@ -141,7 +141,7 @@
         <row>
         <div>
             <blockquote class="blockquote">
-                <p class="mb-0">Every time I MiniMeats my body is grateful and I feel fair towards our planet</p>
+                <p class="mb-0">Every time I eat MiniMeats my body is grateful and I feel fair towards our planet</p>
                 <footer class="blockquote-footer">Guido, <cite title="Brother of founder">Progressive thinker</cite></footer>
             </blockquote>
         </div>
